src/objects/Competitor_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Account_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Asset</label>
        <referenceTo>Account_Asset__c</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Competitors_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Account_Asset__r.Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Account_Asset__r.Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strength_1__c</fullName>
        <formula>Competitor__r.Strength_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advantage 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength_2__c</fullName>
        <formula>Competitor__r.Strength_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advantage 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength_3__c</fullName>
        <formula>Competitor__r.Strength_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advantage 3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weakness_1__c</fullName>
        <formula>Competitor__r.Weakness_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disadvantage 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weakness_2__c</fullName>
        <formula>Competitor__r.Weakness_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disadvantage 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weakness_3__c</fullName>
        <formula>Competitor__r.Weakness_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disadvantage 3)</label>
        <type>Text</type>
    </fields>
    <label>Competitor/Asset</label>
    <nameField>
        <displayFormat>CA - {0000}</displayFormat>
        <label>Competitor/Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors/Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>